Cleaned up top-down resume structure and fixed typos

--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="author" content="Benjamin Protus" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="Ben Protus's AMAZING Portfolio Website"
-      content="A list of Ben Protus's accolades and accomplishments"
+
+    <meta name="keywords"
+          content="Benjamin Protus,
+                   Ben Protus,
+                   Software Developer,
+                   Software Engineer,
+                   Computer Scientist,
+                   Programmer,
+                   Portfolio"
     />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Ben Protus</title>
+    <meta name="description"
+          content="Benjamin Protus's accomplishments as a software developer."
+    />
 
-    <!-- CSS -->
+    <!-- CSS/Images -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
